--- a/HW5/2021_homework5_template.tex
+++ b/HW5/2021_homework5_template.tex
@@ -288,7 +288,434 @@ Write down all sequences of equivalence classes consistent with this set of edge
 \item[(e)] Consider a DAG $V_1 \to V_2 \to V_3 \to V_4 \to V_k$.  How many DAGs are observationally equivalent to this DAG?  Explain.
 \end{enumerate}
 
-\begin{answertext}{12cm}{}
+\begin{answertext}{22cm}{}
+\begin{enumerate}
+
+\item[(a)]
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]	
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(3) edge[blue] (1)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]	
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(3) edge[blue] (2)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(2) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(2) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=7.0cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(3) edge[blue] (2)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (3)
+			(3) edge[blue] (2)
+		;
+	\end{scope}		
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(3) edge[blue] (1)
+			(3) edge[blue] (2)
+		;
+	\end{scope}		
+
+	\begin{scope}[xshift=7.0cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(3) edge[blue] (1)
+			(2) edge[blue] (3)
+		;
+	\end{scope}		
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(1) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(1) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=7.0cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(3) edge[blue] (1)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(3) edge[blue] (1)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(3) edge[blue] (2)
+		;
+	\end{scope}		
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}[xshift=7.0cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (3)
+			(2) edge[blue] (3)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\end{enumerate}
+\end{answertext}
+
+\begin{answertext}{22cm}{}
+\begin{enumerate}
+\item[]
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(3) edge[blue] (1)
+			(2) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(3) edge[blue] (1)
+			(3) edge[blue] (2)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(3) edge[blue] (2)
+			(1) edge[blue] (3)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(3) edge[blue] (2)
+			(3) edge[blue] (1)
+		;
+	\end{scope}		
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (3)
+			(2) edge[blue] (3)
+			(1) edge[blue] (2)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (3)
+			(2) edge[blue] (3)
+			(2) edge[blue] (1)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+
+\begin{tikzpicture}[>=stealth, node distance=1.2cm]
+	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
+
+	\begin{scope}
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(1) edge[blue] (2)
+			(2) edge[blue] (3)
+			(3) edge[blue] (1)
+		;
+	\end{scope}
+
+	\begin{scope}[xshift=3.5cm]
+		\path[->, very thick]
+			node[format] (1) {$A$}
+			node[format, below left of=1] (2) {$B$}
+			node[format, below right of=1] (3) {$C$}
+
+			(2) edge[blue] (1)
+			(3) edge[blue] (2)
+			(1) edge[blue] (3)
+		;
+	\end{scope}
+\end{tikzpicture} \\
+Each line represents all DAGs in an equivalent class. There are a total of 14 equivalent classes. \\
+
+\item[(b)]
+We order the classes in (a) with number 1 - 14 in the order that they are listed. \\
+\begin{enumerate}
+\item[case 1:]
+$p = p(A)p(B)p(C)$ \\
+dimension: $1 + 1 + 1 = 3$
+\item[case 2:]
+$p = p(A)p(B \mid A)p(C)$ \\
+dimension: $1 + 2 + 1 = 4$
+\item[case 3:]
+Similar to case 2, dimension: $4$
+\item[case 4:]
+Similar to case 2, dimension: $4$
+\item[case 5:]
+$p = p(A)p(B \mid A)p(C \mid B)$
+dimension: $1 + 2 + 2 = 5$
+\item[case 6:]
+Similar to case 5, dimension: $5$
+\item[case 7:]
+Similar to case 5, dimension: $5$
+\item[case 8:]
+$p = p(B)p(C)p(A \mid B,C)$
+dimension: $1 + 1 + 4 = 6$
+\item[case 9:]
+Similar to case 8, dimension: $6$
+\item[case 10:]
+Similar to case 8, dimension: $6$
+\item[case 11:]
+$p = p(B)p(C \mid B)p(A \mid B,C)$
+dimension: $1 + 2 + 4 = 7$
+\item[case 12:]
+Similar to case 11, dimension: $7$
+\item[case 13:]
+Similar to case 11, dimension: $7$
+\item[case 14:]
+$p = p(A,B,C)$
+dimension: $7$
+\end{enumerate}
+\end{enumerate}
+\end{answertext}
+
+\begin{answertext}{22cm}{}
+\begin{enumerate}
+\item[(c)]
+\includegraphics[scale=0.12]{graph}
+\item[(d)]
+There are two possible sequences.
+\begin{enumerate}
+\item[(1)]
+$\{A\ B\ C\} \to \{A \to B, C; B \to A, C\} \to \{A \to B \to C; B \to A, B \to C; C \to B \to A\} \to \{A \to B \to C, A \to C; B \to A \to C, B \to C\} \to \{B \to A \to C; A \to B, A \to C; C \to A \to B\}$
+\item[(2)]
+$\{A\ B\ C\} \to \{A \to B, C; B \to A, C\} \to \{A \to B \to C; B \to A, B \to C; C \to B \to A\} \to \{A \to B \to C \to A; A \to C \to B \to A\} \to \{B \to A \to C; A \to B, A \to C; C \to A \to B\}$
+\end{enumerate}
+\item[(e)]
+We should find equivalent DAGs with the following rules:
+\begin{enumerate}
+\item[(1)] Only reverse the direction of existing edges.
+\item[(2)] Since there is no collider in the original DAG, there should also be no collider in the new DAG.
+\end{enumerate}
+Thus we have the following four equivalent DAGs: \\
+$V_{1} \leftarrow V_{2} \to V_{3} \to V_{4} \to V_{5}$ \\
+$V_{1} \leftarrow V_{2} \leftarrow V_{3} \to V_{4} \to V_{5}$ \\
+$V_{1} \leftarrow V_{2} \leftarrow V_{3} \leftarrow V_{4} \to V_{5}$ \\
+$V_{1} \leftarrow V_{2} \leftarrow V_{3} \leftarrow V_{4} \leftarrow V_{5}$ \\
+\end{enumerate}
 \end{answertext}
 
 \newpage % for more space
