--- a/HW5/2021_homework5_template.tex
+++ b/HW5/2021_homework5_template.tex
@@ -190,7 +190,7 @@ empty/.style={circle, text centered, minimum height=3em ,minimum width = .5em, i
 (70 points)\\
 \Large{Assigned: Tuesday, Nov. 16th, 2021} \\
 \Large{Due: Tuesday, Nov. 30th, 2021, 11:59 pm US/Eastern}}
-\author{Partner 1: NAME (JHED), Partner 2:  NAME (JHED)}
+\author{Partner 1: Chang Yan (cyan13), Partner 2:  Jingguo Liang (jliang35)}
 \date{}
 
 \begin{document}
@@ -622,37 +622,10 @@ Write down all sequences of equivalence classes consistent with this set of edge
 	\end{scope}
 \end{tikzpicture} \\
 
-\begin{tikzpicture}[>=stealth, node distance=1.2cm]
-	\tikzstyle{format} = [draw, very thick, circle, minimum size=5.0mm, inner sep=0pt]
-
-	\begin{scope}
-		\path[->, very thick]
-			node[format] (1) {$A$}
-			node[format, below left of=1] (2) {$B$}
-			node[format, below right of=1] (3) {$C$}
-
-			(1) edge[blue] (2)
-			(2) edge[blue] (3)
-			(3) edge[blue] (1)
-		;
-	\end{scope}
-
-	\begin{scope}[xshift=3.5cm]
-		\path[->, very thick]
-			node[format] (1) {$A$}
-			node[format, below left of=1] (2) {$B$}
-			node[format, below right of=1] (3) {$C$}
-
-			(2) edge[blue] (1)
-			(3) edge[blue] (2)
-			(1) edge[blue] (3)
-		;
-	\end{scope}
-\end{tikzpicture} \\
-Each line represents all DAGs in an equivalent class. There are a total of 14 equivalent classes. \\
+Each line represents all DAGs in an equivalent class. There are a total of 13 equivalent classes. \\
 
 \item[(b)]
-We order the classes in (a) with number 1 - 14 in the order that they are listed. \\
+We order the classes in (a) with number 1 - 13 in the order that they are listed. \\
 \begin{enumerate}
 \item[case 1:]
 $p = p(A)p(B)p(C)$ \\
@@ -685,9 +658,6 @@ dimension: $1 + 2 + 4 = 7$
 Similar to case 11, dimension: $7$
 \item[case 13:]
 Similar to case 11, dimension: $7$
-\item[case 14:]
-$p = p(A,B,C)$
-dimension: $7$
 \end{enumerate}
 \end{enumerate}
 \end{answertext}
@@ -697,12 +667,10 @@ dimension: $7$
 \item[(c)]
 \includegraphics[scale=0.12]{graph}
 \item[(d)]
-There are two possible sequences.
+There are only one possible sequence (if we consider the adding and removal of $B \to C$ to be strictly $B \to C$, not $C \to B$ ).
 \begin{enumerate}
 \item[(1)]
 $\{A\ B\ C\} \to \{A \to B, C; B \to A, C\} \to \{A \to B \to C; B \to A, B \to C; C \to B \to A\} \to \{A \to B \to C, A \to C; B \to A \to C, B \to C\} \to \{B \to A \to C; A \to B, A \to C; C \to A \to B\}$
-\item[(2)]
-$\{A\ B\ C\} \to \{A \to B, C; B \to A, C\} \to \{A \to B \to C; B \to A, B \to C; C \to B \to A\} \to \{A \to B \to C \to A; A \to C \to B \to A\} \to \{B \to A \to C; A \to B, A \to C; C \to A \to B\}$
 \end{enumerate}
 \item[(e)]
 We should find equivalent DAGs with the following rules:
