--- a/Final Project/report.ipynb
+++ b/Final Project/report.ipynb
@@ -1,33 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "1af6d0e8-36d2-47c7-88d8-04a46f38ef27",
+   "cell_type": "markdown",
+   "id": "b9b8d806",
    "metadata": {},
    "source": [
-    "Machine Learning Final Project Report\n",
+    "# Machine Learning Final Project Report\n",
     "Chang Yan (cyan13) and Jingguo Liang (jliang35)"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "53e25053-8b82-445f-92ba-0047bd5cfd5e",
+   "cell_type": "markdown",
+   "id": "4ee7cad1",
    "metadata": {},
    "source": [
-    "The goal of this project is to develop deep neural networks that are able to detect human faces in an image and make predictions about this person's age, sex, and race."
+    "## Goal\n",
+    "The goal of this project is to develop deep neural networks that are able to detect human faces in an image and make predictions about this person's age, sex, and race. There are lots of applications for this in real-time cameras."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "60c4afe4-a554-43e2-bbb9-e13310c9fc50",
+   "cell_type": "markdown",
+   "id": "dca4ebaa",
    "metadata": {},
    "source": [
-    "Dataset\n",
+    "## Dataset\n",
     "\n",
     "The dataset used in the project is UTKFace, which can be found on the following website:\n",
     "https://susanqq.github.io/UTKFace/\n",
     "\n",
     "The raw data consists of four parts: \n",
+    "\n",
     "(1) an \"original\" RGB image in .jpg format with arbitrary size that contains one human face. \n",
     "\n",
     "(2) a \"cropped\" RGB image in .jpg format with size (200, 200) that is part of the image in (1) where the face locates in. \n",
@@ -42,18 +44,21 @@
     "\n",
     "(4) Facial landmarks located in the cropped image\n",
     "\n",
-    "In the project, we will only use the first three parts of the data (original image, cropped image, labels). For the labels, we will only use age, gender and race labels."
+    "In the project, we will only use the first three parts of the data (original image, cropped image, labels). For the labels, we will only use age, gender and race labels, as data&time is collection time which it irrelevant."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2da95465-909c-4d58-9e6f-20776a8f4b3f",
+   "cell_type": "markdown",
+   "id": "097a94b2",
    "metadata": {},
    "source": [
-    "Data Processing\n",
+    "## Data Processing\n",
+    "The full data preprocessing scripts can be found in the repo. There are \n",
+    "### Data cleansing\n",
     "\n",
     "The first thing we do is to go through all cropped images and remove those which are obvious wrong (clearly not a face). We also removed all black and white images because we want RGB images as input.\n",
     "\n",
+    "### Crop Box Generation\n",
     "Then, we want to locate the cropbox in the original image. We can do that through SIFT and then finding the homography that maps the cropped image to the original image."
    ]
   },
@@ -98,8 +103,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "e9841f28-171b-4d53-9839-017e74b1532b",
+   "cell_type": "markdown",
+   "id": "e43ac6c6",
    "metadata": {},
    "source": [
     "We notice that some images does not generate any feature through SIFT, or the number of features generated is lower than we want (<25). Those images are discarded.\n",
@@ -133,13 +138,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1fd59084-e050-4bf3-a954-9ca983dc237d",
+   "cell_type": "markdown",
+   "id": "08c0bcb4",
    "metadata": {},
    "source": [
+    "### Feature Engineering\n",
     "We would also like to use the intensity image and the edge map in training. Intensity map can be obtained by a weighted combination of RGB values, and the edge map can be obtained through canny edge detection. We can add the intensity image and the edge map to the RGB image, getting a 5-channel image.\n",
     "\n",
-    "The input to the neural model should be in nchw format, while currently our image is in hwc format. We can simply swap the axes to get the nchw format that we want."
+    "The input to the neural model should be in [N,C,H,W] format, while currently our image is in [H,W,C] format. We can simply swap the axes to get the nchw format that we want."
    ]
   },
   {
@@ -182,12 +188,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "31b393c8-e3ff-4861-8c09-857442daa5c6",
+   "cell_type": "markdown",
+   "id": "5e006c90",
    "metadata": {},
    "source": [
-    "The last thing to do is to divide the data into 5 parts. We will use them for 5-fold cross validation in the training. After the division, we can save the data as .npz files, which will be read back and directly used in training."
+    "### 5 fold cross validation\n",
+    "The last thing to do is to divide the data into 5 parts. We will use them for 5-fold cross validation in the training. After the division, we can save the data as .npz files, which will be read back and directly used in training. Each fold contains 1000 cases."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d42e3600",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -206,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
