--- a/Final Project/report.ipynb
+++ b/Final Project/report.ipynb
@@ -139,6 +139,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05b8b68d",
+   "metadata": {},
+   "source": [
+    "<img src=\"res/SIFT.JPG\"> \n",
+    "<center>SIFT</center>\n",
+    "\n",
+    "<img src=\"res/cropbox.JPG\" width=400 />\n",
+    "<center>Cropbox</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08c0bcb4",
    "metadata": {},
    "source": [
@@ -189,17 +201,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "663455af",
+   "metadata": {},
+   "source": [
+    "### Label Encoding\n",
+    "The original dataset gives ages directly as a number. However, in our model we would like to divide all ages into several categories: <br>\n",
+    "0-3: label 0 <br>\n",
+    "4-6: label 1 <br>\n",
+    "7-10: label 2 <br>\n",
+    "11-15: label 3 <br>\n",
+    "16-20: label 4 <br>\n",
+    "21-25: label 5 <br>\n",
+    "26-30: label 6 <br>\n",
+    "31-40: label 7 <br>\n",
+    "41-50: label 8 <br>\n",
+    "51-60: label 9 <br>\n",
+    "61-80: label 10 <br>\n",
+    "81+: label 11 <br>\n",
+    "\n",
+    "Besides age, we also have sex and race in the labels. For sex: <br>\n",
+    "0: male <br>\n",
+    "1: female <br>\n",
+    "\n",
+    "For race: <br>\n",
+    "0: White <br>\n",
+    "1: Black <br>\n",
+    "2: (East) Asian <br>\n",
+    "3: Indian <br>\n",
+    "4: Other <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5e006c90",
    "metadata": {},
    "source": [
     "### 5 fold cross validation\n",
-    "The last thing to do is to divide the data into 5 parts. We will use them for 5-fold cross validation in the training. After the division, we can save the data as .npz files, which will be read back and directly used in training. Each fold contains 1000 cases."
+    "The last thing to do is to divide the data into 5 parts. We will use them for 5-fold cross validation in the training. After the division, we can save the data as .npz files, which will be read back and directly used in training. Each fold contains 1000 cases. In each fold, there will be one single .npz for all cropboxes, one single .npz for all labels and one .npz file for each of the origina\n",
+    "l images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463508ea",
+   "metadata": {},
+   "source": [
+    "## Model Result\n",
+    "Here are some examples of the model predictions.\n",
+    "<img src=\"res/cropped1.JPG\"> \n",
+    "<center>\n",
+    "    Age: [6] (26-30) <br>\n",
+    "    Sex: [0] (Male) <br>\n",
+    "    Race: [1] (Black) <br>\n",
+    "</center>\n",
+    "\n",
+    "<img src=\"res/cropped2.JPG\"> \n",
+    "<center>\n",
+    "    Age: [10] (61-80) <br>\n",
+    "    Sex: [0] (Male) <br>\n",
+    "    Race: [0] (White) <br>\n",
+    "</center>\n",
+    "\n",
+    "<img src=\"res/cropped3.JPG\"> \n",
+    "<center>\n",
+    "    Age: [6] (26-30) <br>\n",
+    "    Sex: [0] (Male) <br>\n",
+    "    Race: [3] (Indian) <br>\n",
+    "</center>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d42e3600",
+   "id": "9ce499b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -221,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
