--- a/Final Project/report.ipynb
+++ b/Final Project/report.ipynb
@@ -20,6 +20,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0fac1e3d",
+   "metadata": {},
+   "source": [
+    "## Deliverables\n",
+    "We successfully finished all of our deliverables. They are listed below:\n",
+    "#### Must accomplish\n",
+    "1. A program with a trained deep convolutional network with optimized structure and best tuned parameters, that can predict the age of the face in the input image\n",
+    "2. The prediction of the program should be distinctly better than simple benchmark run, like a logistic regression.\n",
+    "3. The program should use appropriate data preprocessing mothods to improve the performance.\n",
+    "\n",
+    "#### Expect to accomplish\n",
+    "1. The program should be able to predict not only age but also sex and ethnicity of the face.\n",
+    "2. The program should use multiple different network structures, ensembles or other methods to further improve the performance.\n",
+    "3. The prediction of the program should reach an accuracy that is usable in real-life, like over 90%,.\n",
+    "4. Adding feature extraction methods before the network (like edge detection) to create more features from the image.\n",
+    "\n",
+    "#### Would like to accomplish\n",
+    "1. The program should be able to first identify the location of the face in the image, and then predict using the cropped face area.\n",
+    "The position of the face should also be an output.\n",
+    "2. The program should be able to take in different sizes of image files.\n",
+    "3. The program should be able to identify an image with no face, instead of giving random output.\n",
+    "4. The program should work with both RGB and grayscale images, and uses the RGB channels to achieve better performance than\n",
+    "grayscale.\n",
+    "5. The speed of the prediction should be fast enough to be done in real-time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6619587d",
    "metadata": {},
    "source": [
@@ -53,7 +81,7 @@
    "metadata": {},
    "source": [
     "## Data Processing\n",
-    "The full data preprocessing scripts can be found in the repo.\n",
+    "The full data preprocessing scripts can be found in the repo under the folder \"DataPreprocessing\".\n",
     "### Data cleansing\n",
     "\n",
     "The first thing we do is to go through all cropped images and remove those which are obvious wrong (clearly not a face). We also removed all black and white images because we want RGB images as input.\n",
@@ -228,7 +256,7 @@
     "1: Black <br>\n",
     "2: (East) Asian <br>\n",
     "3: Indian <br>\n",
-    "4: Other <br>"
+    "4: Other"
    ]
   },
   {
@@ -243,11 +271,108 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6abf2e9d",
+   "metadata": {},
+   "source": [
+    "## Model Result Visualization: Facial Detection: Faster-RCNN\n",
+    "Here are some examples of the predictions made by the facial detection Faster-RCNN network. The visualization is done using the file \"visualization.py\". Note that this is a fully working prediction file that can use the trained networks to detect face and prediction labels. We also provide a part of the code here for demonstration ONLY. Full code can be found on visualization.py."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7766506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show(imgs):\n",
+    "    if not isinstance(imgs, list):\n",
+    "        imgs = [imgs]\n",
+    "    fix, axs = plt.subplots(ncols=len(imgs), squeeze=False)\n",
+    "    for i, img in enumerate(imgs):\n",
+    "        img = img.detach()\n",
+    "        img = F.to_pil_image(img)\n",
+    "        axs[0, i].imshow(np.asarray(img))\n",
+    "        axs[0, i].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])\n",
+    "    plt.savefig(\"image.jpg\")\n",
+    "\n",
+    "def main(args):\n",
+    "    image = cv.imread(\"./Test/9.jpg\")\n",
+    "    imageT = read_image(\"./Test/9.jpg\")\n",
+    "    image = PreprocessImage.preprocess(image)\n",
+    "    shape = image.shape\n",
+    "    \n",
+    "    imageT = F.resize(imageT, [shape[1], shape[2]])\n",
+    "    test_image = image[0:3].astype(float) / 255\n",
+    "    model = Rcnn(args.svpath, \"Rcnn_full_feature_fold_4.pt\", 50, 1)\n",
+    "    model.load()\n",
+    "    boxes, scores = model.predict([test_image])\n",
+    "    if (boxes[0] is not None):\n",
+    "        result = draw_bounding_boxes(imageT, torch.tensor([boxes[0]], dtype=torch.float), colors=[\"blue\"], width=5)\n",
+    "        show(result)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b83885b",
+   "metadata": {},
+   "source": [
+    "<img src=\"res/box1.png\"> \n",
+    "<img src=\"res/box2.png\"> \n",
+    "<img src=\"res/box3.png\"> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e4ffc7a",
+   "metadata": {},
+   "source": [
+    "We can see that our predication is very accurate. The networks in each fold capture every face in each test set. We only show 3 random cases here, but all other results look as accurate as those, and the accuracy is quite consistent across the 5 folds. This demonstrates that the facial detection of our network is very reliable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3feba58",
+   "metadata": {},
+   "source": [
+    "## Model Result Visualization: Label Prediction: The Ensemble\n",
+    "Here are some examples of the predictions made by the ensemble classification network. The visualization is done using the file \"visualization.py\". Note that this is a fully working prediction file that can use the trained networks to detect face and prediction labels. We also provide a part of the code here for demonstration ONLY. Full code can be found on visualization.py."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de114024",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code is only for demonstration purpose and not executable in Jupyter Notebook.\n",
+    "# Complete, executable script can be found in the deliverables (.py files)\n",
+    "\n",
+    "def main(args)\n",
+    "    imageCropped = cv.imread('./Test/cropped3.jpg')\n",
+    "    imageCropped = PreprocessImage.preprocess2(imageCropped).reshape((1, 5, 224, 224))\n",
+    "    model = EnsembleWrapper(args.svpath, \"Ensemble_age_fold_0.pt\", 12, 50, 1)\n",
+    "    model.load()\n",
+    "    age = model.predict(imageCropped)\n",
+    "    print(age)\n",
+    "    model = EnsembleWrapper(args.svpath, \"Ensemble_full_sex_fold_4.pt\", 2, 50, 1)\n",
+    "    model.load()\n",
+    "    sex = model.predict(imageCropped)\n",
+    "    print(sex)\n",
+    "    model = EnsembleWrapper(args.svpath, \"Ensemble_full_race_fold_4.pt\", 5, 50, 1)\n",
+    "    model.load()\n",
+    "    race = model.predict(imageCropped)\n",
+    "    print(race)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "463508ea",
    "metadata": {},
    "source": [
-    "## Model Result\n",
-    "Here are some examples of the model predictions.\n",
+    "\n",
     "<img src=\"res/cropped1.JPG\"> \n",
     "<center>\n",
     "    Age: [6] (26-30) <br>\n",
@@ -265,15 +390,23 @@
     "<img src=\"res/cropped3.JPG\"> \n",
     "<center>\n",
     "    Age: [6] (26-30) <br>\n",
-    "    Sex: [0] (Male) <br>\n",
+    "    Sex: [1] (Female) <br>\n",
     "    Race: [3] (Indian) <br>\n",
     "</center>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6c84c67",
+   "metadata": {},
+   "source": [
+    "We can see that both the prediction of sex and race are quite accurate, but for age the third one is a bit higher than it should be. We believe that there are three reasons for this: 1. The original labels of age may are not accurate, as we actually found some wrongly labeled ones and removed them, but there should still be some missing. 2. Age is very hard to predict even by human eyes, causing difficulties for the network (We also did not use the largest version of each model because of training time). 3. The labels are imbalanced. 26-30 actually is the most common label and the network is a bit biased to it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce499b5",
+   "id": "0ed9dce3",
    "metadata": {},
    "outputs": [],
    "source": []
